force-app/main/default/objects/MD_Quote_Line_Item__c/MD_Quote_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Client Proposal Line Item</label>
    <nameField>
        <label>Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Proposal Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>