force-app/main/default/objects/MD_Quote_Line_Item__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Line Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>