force-app/main/default/objects/MD_Quote_Line_Item__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <formula>IF(
    TEXT(Price_Adjustment_Type__c) = &quot;Discount&quot;,
    Price_Adjustment_Value__c * Quantity__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>