force-app/main/default/objects/MD_Quote_Line_Item__c/fields/Discounts__c.field-meta.xml
<CustomField>
    <fullName>Discounts__c</fullName>
    <formula>IF(
    TEXT(Price_Adjustment_Type__c) = &quot;Discount&quot;,
    (Price_Adjustment_Value__c * Quantity__c) / (UnitPrice__c * Quantity__c) ,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>