force-app/main/default/objects/MD_Quote_Line_Item__c/fields/Exclude_from_Average__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Average__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Average</label>
    <type>Checkbox</type>
</CustomField>