force-app/main/default/objects/MD_Quote_Line_Item__c/fields/is_Create__c.field-meta.xml
<CustomField>
    <fullName>is_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCreate</label>
    <type>Checkbox</type>
</CustomField>