force-app/main/default/objects/MD_Quote_Line_Item__c/fields/is_Update__c.field-meta.xml
<CustomField>
    <fullName>is_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Update</label>
    <type>Checkbox</type>
</CustomField>