force-app/main/default/objects/MD_Quote_Line_Item__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <label>Item Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>