force-app/main/default/objects/MD_Quote_Line_Item__c/fields/Opportunity_Products__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Products,,,</label>
    <referenceTo>MD_OpportunityLineItem__c</referenceTo>
    <relationshipName>Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>