force-app/main/default/objects/MD_Quote_Line_Item__c/fields/Per_Test__c.field-meta.xml
<CustomField>
    <fullName>Per_Test__c</fullName>
    <label>Per Test</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>