force-app/main/default/objects/MD_Quote_Line_Item__c/fields/Quote_Sync_Formula__c.field-meta.xml
<CustomField>
    <fullName>Quote_Sync_Formula__c</fullName>
    <formula>QuoteId__r.IsSyncing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Sync Formula</label>
    <type>Checkbox</type>
</CustomField>