force-app/main/default/objects/MD_Quote_Line_Item__c/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <label>Client Proposal</label>
    <referenceTo>MD_Quote__c</referenceTo>
    <relationshipLabel>Client Proposal Line Items</relationshipLabel>
    <relationshipName>Quote_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>