force-app/main/default/objects/MD_Quote_Line_Item__c/fields/SubTotal1__c.field-meta.xml
<CustomField>
    <fullName>SubTotal1__c</fullName>
    <formula>UnitPrice__c  *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>