force-app/main/default/objects/MD_Quote_Line_Item__c/fields/TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalPrice__c</fullName>
    <formula>IF(
    TEXT(Price_Adjustment_Type__c) = &quot;Surcharge&quot;,
    ( UnitPrice__c + Price_Adjustment_Value__c) *  Quantity__c ,
    IF(
        TEXT(Price_Adjustment_Type__c) = &quot;Discount&quot;,
        (UnitPrice__c - Price_Adjustment_Value__c) * Quantity__c ,
        SubTotal1__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>