force-app/main/default/objects/MD_Quote_Line_Item__c/validationRules/Discount_value_cannot_be_greater_than_Sa.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_value_cannot_be_greater_than_Sa</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   TEXT(Price_Adjustment_Type__c) = &quot;Discount&quot;,
   Price_Adjustment_Value__c &gt;  UnitPrice__c 
)</errorConditionFormula>
    <errorMessage>Discount value cannot be greater than Sales Price.</errorMessage>
</ValidationRule>